--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.5.1"
   }
